--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 		</div><!-- /true-fact-one -->
 		<div class="true-fact-two">
 			
-			<p>Guess who threatens Albatrosses? Yup, humans sure do. Overfishing has depleted food sources and hooks from long line fishing will often be ingested and drown the birds. But feral cats and rats are also a big problem for the albatross. They get introduced to the remote islands where albatrosses breed and then hunt the albatross chicks and destroy the albatross eggs. Tiger Sharks are another big problem for the albatross. They gather off the shores of the breeding colonies and prey on the young birds who are just learning to fly. That’s right, two of the albatross’s biggest problems are cats and tiger sharks. What else brings tiger sharks and cats together?</p>
+			<p>Guess who threatens Albatrosses? Yup, humans sure do. Overfishing has depleted food sources and hooks from long line fishing will often be ingested and drown the birds.</p>
+			<p>But feral cats and rats are also a big problem for the albatross. They get introduced to the remote islands where albatrosses breed and then hunt the albatross chicks and destroy the albatross eggs. </p>
+			<p>Tiger Sharks are another big problem for the albatross. They gather off the shores of the breeding colonies and prey on the young birds who are just learning to fly. That’s right, two of the albatross’s biggest problems are cats and tiger sharks. What else brings tiger sharks and cats together?</p>
 		</div><!-- /true-fact-two -->
 	</div><!-- /albatross-information -->
 	</div><!-- /section-container -->
