--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <header>
 	<div class="header-container">
-		<h1><span class="albatross-facts">Albaross</span> Facts</h1>
+		<h1><span class="albatross-facts">Albatross</span> Facts</h1>
 	</div><!-- /header-container -->
 </header>
 <section>
