--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Albatross Facts</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="funny fake and true facts about albatrosses">
+	<meta name="description" content="funny true and false facts about albatrosses">
 	<meta name="keywords" content="albatross facts, albatross information, albatross images, albatross pictures, funny albatross pictures">
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
