--- a/index.html
+++ b/index.html
@@ -59,7 +59,17 @@
 </section>
 <footer>
 	<div class="footer-container">
+	<div class="disclaimer">
 		<p>This website is for educational purposes only. Thanks! || &copy; 2016 Erin J Howe</p>
+	</div><!-- /disclaimer -->
+	<div class="resources">
+		<h3>Resources</h3>
+			<ul>
+				<li><a href="https://www.flickr.com/photos/gilesthomas/sets/72157627786688854">Amazing Albatross Photogrpahs</a></li>
+				<li><a href="http://animals.nationalgeographic.com/animals/birds/albatross/">National Geographic</a></li>
+				<li><a href="http://mentalfloss.com/article/67870/10-soaring-facts-about-albatrosses">Mental Floss</a></li>
+			</ul>
+		</div><!--  /resources -->
 	</div><!--  /footer-container -->
 </footer>
 
