--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<figcaption>
 				There are 21 Different Varieties of Albatross, Including the Albatrump. 
 			</figcaption>
-			<img src="https://placehold.it/500x500" alt="The Albatrump">
+			<img src="images/albatrump.jpg" alt="The Albatrump">
 		</figure>
 		<div class="non-fact-p">
 			<p>Okay, that is not really true.</p>
@@ -34,7 +34,7 @@
 		</div><!-- non-fact-p -->
 		<div class="non-fact-i">
 			<figure class="wandering-albatross">
-				<img src=https://placehold.it/460x300>
+				<img src="images/wandering.jpg" alt="A Wandering Albatross">
 				<figcaption>
 				This is a Wondering Albatross.
 				</figcaption>
