--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Albatross Facts</title>
+	<title>Albatross Facts, Bird Facts, Important Albatross Information, Seabirds</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="funny true and false facts about albatrosses">
-	<meta name="keywords" content="albatross facts, albatross information, albatross images, albatross pictures, funny albatross pictures">
+	<meta name="description" content="Facts about albatrosses, some are more ture than others. Check out some great images of these beautiful birds while you learn some really cool information.">
+	<meta name="keywords" content="albatross facts, information, seabirds albatross images, albatross pictures, funny pictures, Wandering, Royal, Black-footed, Snooty">
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
@@ -26,7 +26,7 @@
 			<figcaption>
 				There are 21 Different Varieties of Albatross, Including the Albatrump. 
 			</figcaption>
-			<img src="images/albatrump.jpg" alt="The Albatrump">
+			<img src="images/albatrump.jpg" alt="The Albatrump is an imaginary speices of Albatross."  title="The Albatrump is an imaginary speices of Albatross.">
 		</figure>
 		<div class="non-fact-p">
 			<p>Okay, that is not really true.</p>
@@ -34,7 +34,7 @@
 		</div><!-- non-fact-p -->
 		<div class="non-fact-i">
 			<figure class="wandering-albatross">
-				<img src="images/wandering.jpg" alt="A Wandering Albatross">
+				<img src="images/wandering.jpg" alt="The Wandering Albatross is the largest Albatross species." title="The Wandering Albatross is the largest Albatross species.">
 				<figcaption>
 				This is a Wondering Albatross.
 				</figcaption>
