--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<figure class="wandering-albatross">
 				<img src="images/wandering.jpg" alt="The Wandering Albatross is the largest Albatross species." title="The Wandering Albatross is the largest Albatross species.">
 				<figcaption>
-				This is a Wondering Albatross.
+				This is a Wandering Albatross.
 				</figcaption>
 			</figure>
 		</div><!-- /non-fact-i -->
