--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Albatross Facts, Bird Facts, Important Albatross Information, Seabirds</title>
+	<title>Facts about Albatrosses, Bird Facts, Important Albatross Information, Seabirds</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Facts about albatrosses, some are more ture than others. Check out some great images of these beautiful birds while you learn some really cool information.">
 	<meta name="keywords" content="albatross facts, information, seabirds albatross images, albatross pictures, funny pictures, Wandering, Royal, Black-footed, Snooty">
