--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
 <section>
 	<div class="section-container">
 	<div class="weekly-fact clearfix">
-		<h2>Fact:</h2>
-		<figure>
-			<figcaption>
-				There are 21 Different Varieties of Albatross,<br> Including the Albatrump. 
-			</figcaption>
-			<img src="images/albatrump.jpg" alt="The Albatrump is an imaginary speices of Albatross." title="The Albatrump is an imaginary speices of Albatross.">
-		</figure>
+		<div class="fact">
+			<h2>Fact:</h2>
+			<figure>
+				<figcaption>
+					There are 21 Different Varieties of Albatross,<br> Including the Albatrump. 
+				</figcaption>
+				<img src="images/albatrump.jpg" alt="The Albatrump is an imaginary speices of Albatross." title="The Albatrump is an imaginary speices of Albatross.">
+			</figure>
+		</div><!-- /fact -->
 		<div class="non-fact-p">
 			<p>Okay, that is not really true.<br>
 			There is no species of Albatross called the Albatrump.</p>
