--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Facts about Albatrosses, Bird Facts, Important Albatross Information, Seabirds</title>
+	<title>Albatross Facts, Bird Facts, Important Albatross Information, Seabirds</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Facts about albatrosses, some are more ture than others. Check out some great images of these beautiful birds while you learn some really cool information.">
 	<meta name="keywords" content="albatross facts, information, seabirds albatross images, albatross pictures, funny pictures, Wandering, Royal, Black-footed, Snooty">
@@ -77,14 +77,4 @@
 </footer>
 
 </body>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-84581654-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 </html>
