--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Albatross Facts, Bird Facts, Important Albatross Information, Seabirds</title>
+	<title>Albatross Information, Seabird Facts, and the Albatrump</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Facts about albatrosses, some are more ture than others. Check out some great images of these beautiful birds while you learn some really cool information.">
 	<meta name="keywords" content="albatross facts, information, seabirds albatross images, albatross pictures, funny pictures, Wandering, Royal, Black-footed, Snooty">
@@ -20,7 +20,6 @@
 </header>
 <section>
 	<div class="section-container">
-	<div class="weekly-fact clearfix">
 		<div class="fact">
 			<h2>Fact:</h2>
 			<figure>
@@ -30,10 +29,13 @@
 				<img src="images/albatrump.jpg" alt="The Albatrump is an imaginary speices of Albatross." title="The Albatrump is an imaginary speices of Albatross.">
 			</figure>
 		</div><!-- /fact -->
+	</div><!-- /section-container -->
+	<div class="weekly-fact clearfix">
+	<div class="section-container">
 		<div class="non-fact-p">
-			<p>Okay, that is not really true.<br>
-			There is no species of Albatross called the Albatrump.</p>
-			<p>But there are 21 species of albatross, including the Wandering Albatross which has a wing span of up to 11'. Just to put that into perspective, the tallest basketball player is 7'7''.</p>
+		<h2 class="htwo">True Fact:</h2>	
+			<p>There is no species of Albatross called the Albatrump.</p>
+			<p>But there are 21 species of albatross, including the Wandering Albatross which has a wing span of up to 11'. Just to put that into perspective, the tallest basketball player in the NBA is 7'7''.</p>
 		</div><!-- non-fact-p -->
 		<div class="non-fact-i">
 			<figure class="wandering-albatross">
@@ -43,8 +45,10 @@
 				</figcaption>
 			</figure>
 		</div><!-- /non-fact-i -->
-	</div><!-- /weekly-fact-container -->
+	</div><!-- /section-container -->
+	</div><!-- /weekly-fact -->
 	<div class="albatross-information clearfix">
+		<div class="section-container">
 		<h2>Actual Albatross Information</h2>
 		<div class="true-fact-one">
 			<p>Sure, you probably knew the Albatross mates for life. But did you know they aren’t always monogamous? Both males and females “sleep around”. That doesn’t seem to affect the pair’s bond as they still stay committed and raise a chick together each breeding season. Pair bonds are not formed willy nilly; it can take over a year to raise an albatross chick, a serious commitment requiring a reliable partner.</p>
@@ -57,24 +61,37 @@
 			<p>But feral cats and rats are also a big problem for the albatross. They get introduced to the remote islands where albatrosses breed and then hunt the albatross chicks and destroy the their eggs. </p>
 			<p>Tiger Sharks are another challenge for the albatross. They gather off the shores of the breeding colonies and prey on the young birds who are just learning to fly. That’s right, two of the albatross’s biggest problems are cats and tiger sharks. What else brings sharks and cats together?</p>
 		</div><!-- /true-fact-two -->
+		</div><!-- /section-container -->
 	</div><!-- /albatross-information -->
-	</div><!-- /section-container -->
+	
 </section>
 <footer>
-	<div class="footer-container">
-	<div class="disclaimer">
-		<p>This website is for educational purposes only. Thanks! || &copy; 2016 Erin J Howe</p>
-	</div><!-- /disclaimer -->
-	<div class="resources">
-		<h3>Resources</h3>
-			<ul>
-				<li><a href="https://www.flickr.com/photos/gilesthomas/sets/72157627786688854">Amazing Albatross Photogrpahs</a></li>
-				<li><a href="http://animals.nationalgeographic.com/animals/birds/albatross/">National Geographic</a></li>
-				<li><a href="http://mentalfloss.com/article/67870/10-soaring-facts-about-albatrosses">Mental Floss</a></li>
-			</ul>
-		</div><!--  /resources -->
-	</div><!--  /footer-container -->
+	<div class="footer-background">
+		<div class="footer-container">
+		<div class="disclaimer">
+			<p>This website is for educational purposes only. Thanks! || &copy; 2016 Erin J Howe</p>
+		</div><!-- /disclaimer -->
+		<div class="resources">
+			<h3>Resources</h3>
+				<ul>
+					<li><a href="https://www.flickr.com/photos/gilesthomas/sets/72157627786688854">Amazing Albatross Photogrpahs</a></li>
+					<li><a href="http://animals.nationalgeographic.com/animals/birds/albatross/">National Geographic</a></li>
+					<li><a href="http://mentalfloss.com/article/67870/10-soaring-facts-about-albatrosses">Mental Floss</a></li>
+				</ul>
+			</div><!--  /resources -->
+		</div><!--  /footer-container -->
+	</div><!-- /footer-background -->
 </footer>
 
 </body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-84581654-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
