--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 		<div class="resources">
 			<h3>Resources</h3>
 				<ul>
+					<li><a href="http://feministflicks.com/index.html">Feminist Film Reviews</a></li>
 					<li><a href="https://www.flickr.com/photos/gilesthomas/sets/72157627786688854">Amazing Albatross Photogrpahs</a></li>
 					<li><a href="http://animals.nationalgeographic.com/animals/birds/albatross/">National Geographic</a></li>
 					<li><a href="http://mentalfloss.com/article/67870/10-soaring-facts-about-albatrosses">Mental Floss</a></li>
