--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Albatross Information, Seabird Facts, and the Albatrump</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Facts about albatrosses, some are more ture than others. Check out some great images of these beautiful birds while you learn some really cool information.">
+	<meta name="description" content="Facts about albatrosses, some are more true than others. Check out some great images of these beautiful birds while you learn some really cool information.">
 	<meta name="keywords" content="albatross facts, information, seabirds albatross images, albatross pictures, funny pictures, Wandering, Royal, Black-footed, Snooty">
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
@@ -75,7 +75,7 @@
 			<h3>Resources</h3>
 				<ul>
 					<li><a href="http://feministflicks.com/index.html">Feminist Film Reviews</a></li>
-					<li><a href="https://www.flickr.com/photos/gilesthomas/sets/72157627786688854">Amazing Albatross Photogrpahs</a></li>
+					<li><a href="https://www.flickr.com/photos/gilesthomas/sets/72157627786688854">Amazing Albatross Photographs</a></li>
 					<li><a href="http://animals.nationalgeographic.com/animals/birds/albatross/">National Geographic</a></li>
 					<li><a href="http://mentalfloss.com/article/67870/10-soaring-facts-about-albatrosses">Mental Floss</a></li>
 				</ul>
