update for final

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="albatross facts, information, seabirds albatross images, albatross pictures, funny pictures, Wandering, Royal, Black-footed, Snooty">
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" type="text/css" href="stylesheets/reset.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 	<!-- [if lt IE 9]> 
 			<script src="javascript/html5.js"></script>
@@ -19,51 +20,178 @@
 	</div><!-- /header-container -->
 </header>
 <section>
-	<div class="section-container">
-		<div class="fact">
-			<h2>Fact:</h2>
-			<figure>
-				<figcaption>
-					There are 21 Different Varieties of Albatross,<br> Including the Albatrump. 
-				</figcaption>
-				<img src="images/albatrump.jpg" alt="The Albatrump is an imaginary speices of Albatross." title="The Albatrump is an imaginary speices of Albatross.">
-			</figure>
-		</div><!-- /fact -->
-	</div><!-- /section-container -->
-	<div class="weekly-fact clearfix">
-	<div class="section-container">
-		<div class="non-fact-p">
-		<h2 class="htwo">True Fact:</h2>	
-			<p>There is no species of Albatross called the Albatrump.</p>
-			<p>But there are 21 species of albatross, including the Wandering Albatross which has a wing span of up to 11'. Just to put that into perspective, the tallest basketball player in the NBA is 7'7''.</p>
-		</div><!-- non-fact-p -->
-		<div class="wandering">
-			<figure class="wandering-albatross" id="wandering">
-				<img src="images/wandering-albatross.jpg" alt="The Wandering Albatross is the largest Albatross species." title="The Wandering Albatross is the largest Albatross species.">
-				<figcaption>
-				This is a Wandering Albatross.
-				</figcaption>
-			</figure>
-		</div><!-- /wandering -->
+	<div class="white">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3"></div>
+				<div class="col-xs-12 col-md-6">
+					<h2 class="text-center" >Fact:<br><small>There are 21 different species of Albatross.</small></h2>
+				</div>
+				<div class="col-md-3"></div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-md-4">
+					<figure>
+					<img class="img-responsive" src="images/Yellow-nosed-Albatross.jpg" alt="The Yellow Nosed Allbatross" title="The Yellow Nosed Allbatross">
+						<figcaption>This is a Yellow Nosed Albatross</figcaption>
+					</figure>
+				</div>
+				<div class="col-xs-12 col-md-4">
+					<figure>
+					<img class="img-responsive" src="images/laysan-albatross-frans-lanting.jpg" alt="The Laysan Allbatross" title="The Laysan Allbatross">
+						<figcaption>These are Laysan Albatrosses</figcaption>
+					</figure>
+				</div>
+				<div class="col-xs-12 col-md-4">
+					<figure>
+					<img class="img-responsive" src="images/black-browed.jpg" alt="The Black Browed" title="The Black Browed">
+						<figcaption>This is a Black Browed Albatross</figcaption>
+					</figure>
+				</div>
+			</div>
+		</div><!-- /section-container -->
+	</div>
+	<div class="weekly-fact">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-xs-12">
+				<h2>Fact:</h2>
+				<p >The Wandering Albatross has a wing span of up to 11'.<br> That makes it the bird with the largest wing span on the planet. Just to put that into perspective, the tallest basketball player in the NBA is 7'7''.</p>
+			</div>
+			<div class="col-xs-12 col-md-6">
+				<figure>
+				<img class="img-responsive" src="images/wandering1.jpeg" alt="The Black Browed">
+					<figcaption>This Wandering Albatross is having a morning stretch.</figcaption>
+				</figure>
+			</div>
+		</div>
 	</div><!-- /section-container -->
 	</div><!-- /weekly-fact -->
-	<div class="albatross-information clearfix">
-		<div class="section-container">
-		<h2>Actual Albatross Information</h2>
-		<div class="true-fact-one">
-			<p>Sure, you probably knew the Albatross mates for life. But did you know they aren’t always monogamous? Both males and females “sleep around”. That doesn’t seem to affect the pair’s bond as they still stay committed and raise a chick together each breeding season. Pair bonds are not formed willy nilly; it can take over a year to raise an albatross chick, a serious commitment requiring a reliable partner.</p>
-			<p>When an albatross reaches sexual maturity, it will fly to a breeding colony, but not to mate. It’s going there to practice “dancing”. The young albatross will rehearse their moves for a few years, learning what works and what doesn’t. They are born knowing the right behaviors but they don’t know how to read or respond to other birds. It takes practice to get it right. Sound familiar?</p>
-			<p>After practicing for a few years, albatrosses will start to dance for fewer and fewer birds, eventually picking a single partner. Partners will then continue to practice together creating a dance that is totally unique to them. No other Albatross pair will dance the same.</p>
-		</div><!-- /true-fact-one -->
-		<div class="true-fact-two">
-			
-			<p>Guess who threatens Albatrosses? Yup, humans sure do. Overfishing has depleted food sources and hooks from long line fishing will often be ingested and drown the birds.</p>
-			<p>But feral cats and rats are also a big problem for the albatross. They get introduced to the remote islands where albatrosses breed and then hunt the albatross chicks and destroy the their eggs. </p>
-			<p>Tiger Sharks are another challenge for the albatross. They gather off the shores of the breeding colonies and prey on the young birds who are just learning to fly. That’s right, two of the albatross’s biggest problems are cats and tiger sharks. What else brings sharks and cats together?</p>
-		</div><!-- /true-fact-two -->
-		</div><!-- /section-container -->
-	</div><!-- /albatross-information -->
-	
+	<div class="white">
+		<div class="container">
+		<h2>More Albatross Information</h2>
+			<div class="row">
+				<div class="col-xs-12 col-md-6">
+					<h3>Swingers?</h3>
+					<p>Sure, you probably knew the Albatross mates for life. But did you know they aren’t always monogamous? Both males and females “sleep around”. That doesn’t seem to affect the pair’s bond as they still stay committed and raise a chick together each breeding season. Pair bonds are not formed willy nilly; it can take over a year to raise an albatross chick, a serious commitment requiring a reliable partner.</p>
+				</div>
+				<div class="col-xs-12 col-md-6">
+					<figure>
+						<img class="img-responsive" src="images/black-browed-chick.jpg" alt="This a Black Browed Albatross with it's chick." title="This a Black Browed Albatross with it's chick.">
+						<figcaption>This is a Black Browed Albatross chick with one of it's parents.</figcaption>
+					</figure>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="weekly-fact">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-md-6">
+						<figure>
+							<img class="img-responsive" src="images/laysan-Albatross-courtship-dance.jpg" alt="This Laysan Albatrosses performing their courtship dance." title="This Laysan Albatrosses performing their courtship dance.">
+							<figcaption>These Laysan Albatrosses are performing their courtship dance.</figcaption>
+						</figure>
+					</div>
+					<div class="col-xs-12 col-md-6">
+						<h3>A Natural Born Dancer</h3>
+						<p>When an albatross reaches sexual maturity, it will fly to a breeding colony, but not to mate. It’s going there to practice “dancing”. The young albatross will rehearse their moves for a few years, learning what works and what doesn’t. They are born knowing the right behaviors but they don’t know how to read or respond to other birds. It takes practice to get it right. Sound familiar?</p>
+					</div>
+				</div>
+			</div>
+	</div>
+	<div class="white">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-md-6">
+						<h3>True Romantics</h3>
+						<p>After practicing for a few years, albatrosses will start to dance for fewer and fewer birds, eventually picking a single partner. Partners will then continue to practice together creating a dance that is totally unique to them. No other Albatross pair will dance the same.</p>
+					</div>
+					<div class="col-xs-12 col-md-6">
+						<figure>
+							<img class="img-responsive" src="http://i.imgur.com/XabGi3f.gif" alt="Waved Albatrosses performing their courtship dance." title="These Waved Albatrosses are performing their courtship dance.">
+							<figcaption>Waved Albatrosses are performing their courtship dance on the Galapagos Islands.</figcaption>
+						</figure>
+					</div>
+				</div>
+			</div>
+	</div>
+	<div class="weekly-fact">
+			<div class="container">
+				<h2>Albatross Problems</h2>
+				<div class="col-xs-12 col-md-6">
+				<h3>Humans</h3>
+				<p>Guess who threatens Albatrosses? <br>Humans, of course. Overfishing has depleted food sources, and hooks from longline fishing are often ingested and drown the birds.</p>	
+				</div>
+				<div class="col-xs-12 col-md-6">
+					<figure>
+						<img class="img-responsive" src="images/grey-headed-chick.jpg" alt="Grey Headed Albatross Chick" title="Grey Headed Albatross Chick">
+						<figcaption>This Grey Headed Albatross chick is judging you.</figcaption>
+					</figure>
+				</div>
+			</div>
+	</div>
+	<div class="white">
+			<div class="container">
+				<div class="col-xs-12 col-md-6">
+					<figure>
+						<img class="img-responsive" src="images/tigerkitty.jpg" alt="The Catshark" title="The Catshark is a real shark, but this isn't what it looks like.">
+						<figcaption>The Catshark is a real shark, but this isn't what it looks like.</figcaption>
+					</figure>
+				</div>
+				<div class="col-xs-12 col-md-6">
+					<h3>Sharks and Cats</h3>
+					<p>Feral cats and rats are also a big problem for the albatross. They are introduced to the remote islands where albatrosses breed and will hunt the albatross chicks and destroy their eggs.</p>
+					<p>Tiger Sharks are another challenge for the albatross. They gather on the shores of the breeding colonies and prey on young birds who are just learning to fly. That’s right, two of the albatrosses biggest problems are cats and tiger sharks. What else brings sharks and cats together?</p>	
+				</div>
+			</div>
+	</div>
+	<div class="container">
+		<h2>More Pictures of Albatrosses</h2>
+		<h3>Because they are cool and awesome.</h3>
+		<div class="row">
+			<div class="col-xs-12 col-md-4">
+				<figure>
+				<img class="img-responsive" src="images/large1.jpg" alt="The Albatross is a big bird" title="The Albatross is a big bird">
+				<figcaption>
+					<figcaption>This Albatross is dwarfing the other sea birds. </figcaption>
+				</figure>
+			</div>
+			<div class="col-xs-12 col-md-4">
+				<figure>
+				<img class="img-responsive" src="images/attenborough_albatross.jpg" alt="David Attenborough with an Albatross" title="David Attenborough with an Albatross">
+					<figcaption>Isn’t David Attenborough the coolest? This is him hanging out with an Albatross. My hero.</figcaption>
+				</figure>
+			</div>
+			<div class="col-xs-12 col-md-4">
+				<figure>
+				<img class="img-responsive" src="images/laysan-chick.jpg" alt="Laysan Albatross Chick" title="Laysan Albatross Chick">
+					<figcaption>This is the adorable fuzzy face of a Laysan Albatross Chick.</figcaption>
+				</figure>
+			</div>		
+		</div>
+		<div class="row">
+			<div class="col-xs-12 col-md-4">
+				<figure>
+				<img class="img-responsive" src="images/wandering-albatross.jpg" alt="The Wandering Albatross is the largest Albatross species." title="The Wandering Albatross is the largest Albatross species.">
+				<figcaption>
+					<figcaption>This Wandering Albatross is little curious.</figcaption>
+				</figure>
+			</div>
+			<div class="col-xs-12 col-md-4">
+				<figure>
+				<img class="img-responsive" src="images/wandering3.jpg" alt="The Wandering Allbatross" title="The Wandering Allbatross">
+					<figcaption>This is a Wandering Albatross coming in for a landing.</figcaption>
+				</figure>
+			</div>
+			<div class="col-xs-12 col-md-4">
+				<figure>
+				<img class="img-responsive" src="images/RoyalAlbatross.jpg" alt="The majestic Royal Albatross.">
+					<figcaption>This Royal Albatross is majestic. Fact. Just look at this soar.</figcaption>
+				</figure>
+			</div>
+		</div>
+	</div>
 </section>
 <footer>
 	<div class="footer-background">
@@ -72,18 +200,21 @@
 			<p>This website is for educational purposes only. Thanks! || &copy; 2016 Erin J Howe</p>
 		</div><!-- /disclaimer -->
 		<div class="resources">
-			<h3>Resources</h3>
+			<h3>Resources &amp; Cool Things</h3>
 				<ul>
-					<li><a href="http://feministflicks.com/index.html">Feminist Film Reviews</a></li>
-					<li><a href="https://www.flickr.com/photos/gilesthomas/sets/72157627786688854">Amazing Albatross Photographs</a></li>
-					<li><a href="http://animals.nationalgeographic.com/animals/birds/albatross/">National Geographic</a></li>
-					<li><a href="http://mentalfloss.com/article/67870/10-soaring-facts-about-albatrosses">Mental Floss</a></li>
+					<li><a href="http://feministflicks.com/index.html" target="blank">Feminist Film Reviews</a></li>
+					<li><a href="http://sweb1.dmit.nait.ca/~gfung4/Pembroke_Welsh_Corgi_Website/caring.html" target="blank">Pembroke Welsh Corgi Fan Page</a></li>
+					<li><a href="https://www.flickr.com/photos/gilesthomas/sets/72157627786688854" target="blank">Amazing Albatross Photographs</a></li>
+					<li><a href="http://animals.nationalgeographic.com/animals/birds/albatross/" target="blank">National Geographic</a></li>
+					<li><a href="http://mentalfloss.com/article/67870/10-soaring-facts-about-albatrosses" target="blank">Mental Floss</a></li>
+					<li><a href="http://www.cbc.ca/lifestory/extras/stories/animal-courtship" target="blank">Life Story on CBC</a></li>
 				</ul>
 			</div><!--  /resources -->
 		</div><!--  /footer-container -->
 	</div><!-- /footer-background -->
 </footer>
-
+<script src="javascript/jquery-3.1.1.slim.min.js"></script>
+<script src="javascript/bootstrap.min.js"></script>
 </body>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
