Remove refrence to Albatrump
and center figcations

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Albatross Information, Seabird Facts, and the Albatrump</title>
+	<title>Albatross Information, Seabird Facts, and Photographs of Albatrosses</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Facts about albatrosses, some are more true than others. Check out some great images of these beautiful birds while you learn some really cool information.">
 	<meta name="keywords" content="albatross facts, information, seabirds albatross images, albatross pictures, funny pictures, Wandering, Royal, Black-footed, Snooty">
@@ -33,19 +33,19 @@
 				<div class="col-xs-12 col-md-4">
 					<figure>
 					<img class="img-responsive" src="images/Yellow-nosed-Albatross.jpg" alt="The Yellow Nosed Allbatross" title="The Yellow Nosed Allbatross">
-						<figcaption>This is a Yellow Nosed Albatross</figcaption>
+						<figcaption class="text-center">This is a Yellow Nosed Albatross</figcaption>
 					</figure>
 				</div>
 				<div class="col-xs-12 col-md-4">
 					<figure>
 					<img class="img-responsive" src="images/laysan-albatross-frans-lanting.jpg" alt="The Laysan Allbatross" title="The Laysan Allbatross">
-						<figcaption>These are Laysan Albatrosses</figcaption>
+						<figcaption class="text-center">These are Laysan Albatrosses</figcaption>
 					</figure>
 				</div>
 				<div class="col-xs-12 col-md-4">
 					<figure>
 					<img class="img-responsive" src="images/black-browed.jpg" alt="The Black Browed" title="The Black Browed">
-						<figcaption>This is a Black Browed Albatross</figcaption>
+						<figcaption class="text-center">This is a Black Browed Albatross</figcaption>
 					</figure>
 				</div>
 			</div>
@@ -61,7 +61,7 @@
 			<div class="col-xs-12 col-md-6">
 				<figure>
 				<img class="img-responsive" src="images/wandering1.jpeg" alt="The Black Browed">
-					<figcaption>This Wandering Albatross is having a morning stretch.</figcaption>
+					<figcaption class="text-center">This Wandering Albatross is having a morning stretch.</figcaption>
 				</figure>
 			</div>
 		</div>
@@ -78,7 +78,7 @@
 				<div class="col-xs-12 col-md-6">
 					<figure>
 						<img class="img-responsive" src="images/black-browed-chick.jpg" alt="This a Black Browed Albatross with it's chick." title="This a Black Browed Albatross with it's chick.">
-						<figcaption>This is a Black Browed Albatross chick with one of it's parents.</figcaption>
+						<figcaption class="text-center">This is a Black Browed Albatross chick with one of it's parents.</figcaption>
 					</figure>
 				</div>
 			</div>
@@ -90,7 +90,7 @@
 					<div class="col-xs-12 col-md-6">
 						<figure>
 							<img class="img-responsive" src="images/laysan-Albatross-courtship-dance.jpg" alt="This Laysan Albatrosses performing their courtship dance." title="This Laysan Albatrosses performing their courtship dance.">
-							<figcaption>These Laysan Albatrosses are performing their courtship dance.</figcaption>
+							<figcaption class="text-center">These Laysan Albatrosses are performing their courtship dance.</figcaption>
 						</figure>
 					</div>
 					<div class="col-xs-12 col-md-6">
@@ -110,7 +110,7 @@
 					<div class="col-xs-12 col-md-6">
 						<figure>
 							<img class="img-responsive" src="http://i.imgur.com/XabGi3f.gif" alt="Waved Albatrosses performing their courtship dance." title="These Waved Albatrosses are performing their courtship dance.">
-							<figcaption>Waved Albatrosses are performing their courtship dance on the Galapagos Islands.</figcaption>
+							<figcaption class="text-center">Waved Albatrosses are performing their courtship dance on the Galapagos Islands.</figcaption>
 						</figure>
 					</div>
 				</div>
@@ -126,7 +126,7 @@
 				<div class="col-xs-12 col-md-6">
 					<figure>
 						<img class="img-responsive" src="images/grey-headed-chick.jpg" alt="Grey Headed Albatross Chick" title="Grey Headed Albatross Chick">
-						<figcaption>This Grey Headed Albatross chick is judging you.</figcaption>
+						<figcaption class="text-center">This Grey Headed Albatross chick is judging you.</figcaption>
 					</figure>
 				</div>
 			</div>
@@ -136,7 +136,7 @@
 				<div class="col-xs-12 col-md-6">
 					<figure>
 						<img class="img-responsive" src="images/tigerkitty.jpg" alt="The Catshark" title="The Catshark is a real shark, but this isn't what it looks like.">
-						<figcaption>The Catshark is a real shark, but this isn't what it looks like.</figcaption>
+						<figcaption class="text-center">The Catshark is a real shark, but this isn't what it looks like.</figcaption>
 					</figure>
 				</div>
 				<div class="col-xs-12 col-md-6">
@@ -154,19 +154,19 @@
 				<figure>
 				<img class="img-responsive" src="images/large1.jpg" alt="The Albatross is a big bird" title="The Albatross is a big bird">
 				<figcaption>
-					<figcaption>This Albatross is dwarfing the other sea birds. </figcaption>
+					<figcaption class="text-center">This Albatross is dwarfing the other sea birds. </figcaption>
 				</figure>
 			</div>
 			<div class="col-xs-12 col-md-4">
 				<figure>
 				<img class="img-responsive" src="images/attenborough_albatross.jpg" alt="David Attenborough with an Albatross" title="David Attenborough with an Albatross">
-					<figcaption>Isn’t David Attenborough the coolest? This is him hanging out with an Albatross. My hero.</figcaption>
+					<figcaption class="text-center">Isn’t David Attenborough the coolest? This is him hanging out with an Albatross. My hero.</figcaption>
 				</figure>
 			</div>
 			<div class="col-xs-12 col-md-4">
 				<figure>
 				<img class="img-responsive" src="images/laysan-chick.jpg" alt="Laysan Albatross Chick" title="Laysan Albatross Chick">
-					<figcaption>This is the adorable fuzzy face of a Laysan Albatross Chick.</figcaption>
+					<figcaption class="text-center">This is the adorable fuzzy face of a Laysan Albatross Chick.</figcaption>
 				</figure>
 			</div>		
 		</div>
@@ -175,19 +175,19 @@
 				<figure>
 				<img class="img-responsive" src="images/wandering-albatross.jpg" alt="The Wandering Albatross is the largest Albatross species." title="The Wandering Albatross is the largest Albatross species.">
 				<figcaption>
-					<figcaption>This Wandering Albatross is little curious.</figcaption>
+					<figcaption class="text-center">This Wandering Albatross is little curious.</figcaption>
 				</figure>
 			</div>
 			<div class="col-xs-12 col-md-4">
 				<figure>
 				<img class="img-responsive" src="images/wandering3.jpg" alt="The Wandering Allbatross" title="The Wandering Allbatross">
-					<figcaption>This is a Wandering Albatross coming in for a landing.</figcaption>
+					<figcaption class="text-center">This is a Wandering Albatross coming in for a landing.</figcaption>
 				</figure>
 			</div>
 			<div class="col-xs-12 col-md-4">
 				<figure>
 				<img class="img-responsive" src="images/RoyalAlbatross.jpg" alt="The majestic Royal Albatross.">
-					<figcaption>This Royal Albatross is majestic. Fact. Just look at this soar.</figcaption>
+					<figcaption class="text-center">This Royal Albatross is majestic. Fact. Just look at this soar.</figcaption>
 				</figure>
 			</div>
 		</div>
