--- a/index.html
+++ b/index.html
@@ -12,6 +12,33 @@
 	<!-- [if lt IE 9]> 
 			<script src="javascript/html5.js"></script>
 		<![endif]-->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWmSB2Q6Vq2GG76m-z3d1-_zumiVC6SrY"></script>
+    <script>
+     function gotoDun(){
+     	var mapOptions ={
+     		center: new google.maps.LatLng(-45.776154, 170.729020),
+     		zoom: 12, // from 0 - 23 for most of the mapped earth surface
+     		mapTypeId: google.maps.MapTypeId.ROADMAP //Types: HYBRID , TERRAIN, ROADMAP, SATELLITE
+
+     	};
+     	var map = new google.maps.Map(document.getElementById("map"),mapOptions);
+
+     };
+
+
+     function gotoFal(){
+      var mapOptions ={
+        center: new google.maps.LatLng(-1.374590, -89.672332),
+        zoom: 12, // from 0 - 23 for most of the mapped earth surface
+        mapTypeId: google.maps.MapTypeId.ROADMAP //Types: HYBRID , TERRAIN, ROADMAP, SATELLITE
+      };
+      var map = new google.maps.Map(document.getElementById("map"),mapOptions);
+
+     };
+
+     google.maps.event.addDomListener(window, 'load', gotoDun);
+
+    </script>
 </head>
 <body>
 <header>
@@ -23,11 +50,11 @@
 	<div class="white">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3"></div>
+				
 				<div class="col-xs-12 col-md-6">
-					<h2 class="text-center" >Fact:<br><small>There are 21 different species of Albatross.</small></h2>
+					<h2>Fact:<br><small>There are 21 different species of Albatross.</small></h2>
 				</div>
-				<div class="col-md-3"></div>
+				<div class="col-md-6"></div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-md-4">
@@ -51,11 +78,11 @@
 			</div>
 		</div><!-- /section-container -->
 	</div>
-	<div class="weekly-fact">
+	<div class="white">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-xs-12">
-				<h2>Fact:</h2>
+				<h2>Fact Two:</h2>
 				<p >The Wandering Albatross has a wing span of up to 11'.<br> That makes it the bird with the largest wing span on the planet. Just to put that into perspective, the tallest basketball player in the NBA is 7'7''.</p>
 			</div>
 			<div class="col-xs-12 col-md-6">
@@ -67,7 +94,7 @@
 		</div>
 	</div><!-- /section-container -->
 	</div><!-- /weekly-fact -->
-	<div class="white">
+	<div class="weekly-fact">
 		<div class="container">
 		<h2>More Albatross Information</h2>
 			<div class="row">
@@ -100,7 +127,7 @@
 				</div>
 			</div>
 	</div>
-	<div class="white">
+	<div class="weekly-fact">
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 col-md-6">
@@ -117,6 +144,22 @@
 			</div>
 	</div>
 	<div class="weekly-fact">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 col-md-6">
+						<div id="map"></div>
+					</div>
+					<div class="col-xs-12 col-md-6">
+						<h3>Nesting Colonies</h3>
+						<p>Albatrosses nest on remote islands, usually exposed to make approaching from the sea easy. Some species of albatross like to nest under trees, some prefer dense colonies, and other species like widely spaced nests. Most albatrosses will usually return to the colony where they were born to nest.</p>
+						<p>There are a few accessible albatross nesting colonies. If you promise to follow all the rules and not disturb these super cool birds, we will tell you where you can visit to see one.</p>
+						<a href="javascript:gotoDun()">Dunedin</a><br>
+			    		<a href="javascript:gotoFal()">Española Island</a><br>
+					</div>
+				</div>
+			</div>
+	</div>
+	<div class="white">
 			<div class="container">
 				<h2>Albatross Problems</h2>
 				<div class="col-xs-12 col-md-6">
