--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 					</div>
 					<div class="col-xs-12 col-md-6">
 						<h3>Nesting Colonies</h3>
-						<p>Albatrosses nest on remote islands, usually exposed to make approaching from the sea easy. Some species of albatross like to nest under trees, some prefer dense colonies, and other species like widely spaced nests. Most albatrosses will usually return to the colony where they were born to nest.</p>
+						<p>Albatrosses nest on remote islands, usually exposed areas with good approaches from the sea easy. Some species of albatross like to nest under trees, some prefer dense colonies, and other species like widely spaced nests. Most albatrosses will usually return to the colony where they were born to nest.</p>
 						<p>There are a few accessible albatross nesting colonies. If you promise to follow all the rules and not disturb these super cool birds, we will tell you where you can visit to see one.</p>
 						<a href="javascript:gotoDun()">New Zealand</a><br>
 			    		<a href="javascript:gotoFal()">Galapagos Islands</a><br>
